updated file folder

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,6 @@
+version: '3'
 services:
-  server:
-    build:
-      context: .
-    container_name: my_telegram_bot
+  bot:
+    build: .
     env_file:
       - .env
-    # Оставляем порты, только если действительно нужны:
-    ports:
-      - "8000:8000"
-    # Если в Dockerfile нет команды CMD ["python", "GPTBot.py"], 
-    # раскомментируйте команду ниже:
-    # command: python GPTBot.py
