--- a/compose.yaml
+++ b/compose.yaml
@@ -4,3 +4,8 @@ services:
     build: .
     env_file:
       - .env
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
